# legendary-octo-guide

./: .gitignore  DEVELOPER.md  alembic.ini  docker-dev.yml  env.example  main.py  pyproject.toml  web-scraper.ipynb
.github/workflows/: main-release.yml
alembic/: env.py
alembic/versions/: 0440f272b002_.py
api/: __init__.py  config.py  db.py  schemas.py
api/sounds/: __init__.py  models.py
compose/api/: Dockerfile  entrypoint  start
