[tool.poetry]
name = "legendary-octo-guide"
version = "0.1.0"
description = ""
authors = ["Michael Smith <mismith@nla.gov.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
alembic = "^1.14.0"
sqlmodel = "^0.0.22"
gunicorn = "^23.0.0"
uvicorn = "^0.32.1"
pydantic = "^2.10.2"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
greenlet = "^3.1.1"
python-multipart = "^0.0.19"
fastapi-crudrouter = "^0.8.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
ipykernel = "^6.29.5"
bs4 = "^0.0.2"
requests = "^2.32.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
